Fixed mobile responsive issue with hero logo being too big

--- a/styles/game.scss
+++ b/styles/game.scss
@@ -258,4 +258,11 @@ footer{
             width:90%;
         }
     }
+
+    .gameContainer{
+        .heroLogo img{
+            width:auto;
+            height:75px;
+        }
+    }
 }
