--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -114,10 +114,11 @@ main{
         background-color: $superYellow;
         border:5px solid darken($superRed, 10);
         border-radius: 5px;
-        width:200px;
+        width:clamp(100px, 100% ,200px);
         text-align: center;
         padding:10px;
         margin:0 auto;
+        font-size: clamp(12px, 2vw ,22px);
     }
 }
 
